   operator overloading to do these conversions automatically.
   
  
Changes in detail
-----------------
The following virtual functions have been modified
CWnd::Create
CWnd::CreateEx
CWnd::OnDraw
CWnd::OnEraseBkgnd

Other changes:
Function which returned pointers to Win32++ objects now return Win32++ objects
Functions arguments which were pointers to Win32++ objects are now handles.  

Modified CBitmap::CreateCompatibleBitmap
Modified CBitmap::CreateDIBitmap
Modified CBitmap::CreateDIBSection
Modified CBitmap::GetDIBits
Modified CBitmap::SetDIBits
Modified CBitmapInfoPtr::CBitmapInfoPtr
Modified CBrush::CreatePatternBrush
Modified CClientDC::CClientDC
Modified CComboBoxEx::GetImageList
Modified CComboBoxEx::SetImageList
Modified CDC::BitBlt
Modified CDC::CreateCompatibleDC
Modified CDC::CreateCompatibleBitmap
Modified CDC::CreateDIBitmap
Modified CDC::CreateDIBSection
Modified CDC::CreatePatternBrush
Modified CDC::DrawIconEx
Modified CDC::ExtSelectClipRgn
Modified CDC::FillRect
Modified CDC::FillRgn
Modified CDC::FrameRect
Modified CDC::FrameRgn
Modified CDC::GetCurrentBitmap
Modified CDC::GetCurrentBrush
Modified CDC::GetCurrentFont
Modified CDC::GetCurrentPalette
Modified CDC::GetCurrentPen
Modified CDC::GrayString
Modified CDC::MaskBlt
Modified CDC::GetDIBits
Modified CDC::PaintRgn
Modified CDC::SelectClipRgn
Modified CDC::SelectObject (all versions)
Modified CDC::SetDIBits
Modified CDC::StretchBlt
Modified CDC::TransparentBlt
Modified CDateTime::GetMonthCalFont
Modified CDialog::Create
Modified CDialog::DoModal
Modified CDialog::DoModeless
Modified CDialog::GotoDlgCtrl
Modified CDocker::GetDockBar		
Modified CDocker::GetDockClient	
Modified CDocker::GetDockHint
Modified CDocker::IsChildOfDocker
Modified CDocker::IsRelated
Modified CDocker::OnDockActivated
Modified CDocker::OnDockDestroyed
Modified CDocker::OnExitSizeMove
Modified CDocker::OnNCLButtonDblClk
Modified CDocker::OnSysColorChange
Modified CDocker::OnSysCommand
Modified CDocker::OnTimer