@@ -154,7 +154,7 @@ END
 
 STRINGTABLE
 BEGIN
-    IDW_MAIN                "Frame Window"
+    IDW_MAIN                "GDI Plus Demo"
     IDW_VIEW_TOOLBAR        "Show or hide the tool bar"
     IDW_VIEW_STATUSBAR      "Show or hide the status bar"
 	IDW_INDICATOR_CAPS      "CAP"
