@@ -155,7 +155,7 @@ END
 
 STRINGTABLE
 BEGIN
-    IDW_MAIN                "Scribble Application"
+    IDW_MAIN                "Ribbon Frame Application"
 	IDW_INDICATOR_CAPS      "CAP"
     IDW_INDICATOR_NUM       "NUM"
     IDW_INDICATOR_SCRL      "SCRL"
